crates/rlf-macros/tests/fail/tags_before_name.rs
use rlf::rlf;

rlf! {
    :masc sword = "sword";
}

fn main() {}
