crates/rlf-macros/tests/fail/tags_before_name.stderr
error: expected identifier
 --> tests/fail/tags_before_name.rs:4:5
  |
4 |     :masc sword = "sword";
  |     ^
